[package]
name = "cargo-casper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
clap-cargo = { version = "0.14.0", features = ["cargo_metadata"] }
libloading = "0.8.3"
casper-sdk-sys = { path = "../smart_contracts/sdk-sys" }
casper-sdk = { path = "../smart_contracts/sdk", features = ["__abi_generator"] }
include_dir = "0.7.4"
tempfile = "3.10.1"
anyhow = "1.0.86"
serde_json = "1.0.70"
wabt = "0.10.0"