[package]
name = "cargo-casper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
clap-cargo = { version = "0.14.0", features = ["cargo_metadata"] }
libloading = "0.8.6"
casper-sdk-sys = { path = "../smart_contracts/sdk-sys" }
casper-sdk = { path = "../smart_contracts/sdk", features = ["__abi_generator"] }
include_dir = "0.7.4"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140" }
cargo_metadata = "0.19.2"
wabt = "0.10.0"
once_cell = "1.21.3"
crossterm = "0.29.0"
thiserror = "2.0.12"
atty = "0.2.14"
