[package]
name = "project-template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
casper-macros = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc8" }
casper-sdk = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc8" }