[package]
name = "casper-executor-wasm-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9"
blake2 = "0.10"
borsh = { version = "1.5", features = ["derive"] }
casper-sdk-sys = { path = "../../smart_contracts/sdk-sys" }
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = "2"
safe-transmute = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
