[package]
name = "casper-executor-wasm-host"
version = "0.1.0"
edition = "2021"

[dependencies]
base16 = "0.2.1"
bytes = "1.6.0"
casper-executor-wasm-common = { path = "../wasm-common" }
casper-executor-wasm-interface = { path = "../wasm-interface" }
casper-storage = { path = "../../storage" }
casper-types = { path = "../../types" }
either = "1.13.0"
num-derive = { workspace = true }
num-traits = { workspace = true }
parking_lot = "0.12.3"
safe-transmute = "0.11.2"
thiserror = "1.0.61"
tracing = "0.1.40"