[package]
name = "casper-executor-wasm-host"
version = "0.1.0"
edition = "2021"

[dependencies]
base16 = "0.2"
bytes = "1.10"
casper-executor-wasm-common = { path = "../wasm-common" }
casper-executor-wasm-interface = { path = "../wasm-interface" }
casper-storage = { path = "../../storage" }
casper-types = { path = "../../types" }
either = "1.15"
num-derive = { workspace = true }
num-traits = { workspace = true }
parking_lot = "0.12"
safe-transmute = "0.11"
thiserror = "2.0"
tracing = "0.1"
