[package]
name = "casper-executor-wasm-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6"
borsh = { version = "1.5", features = ["derive"] }
casper-executor-wasm-common = { path = "../wasm-common" }
casper-storage = { path = "../../storage" }
casper-types = { path = "../../types" }
parking_lot = "0.12"
thiserror = "2.0"
