[package]
name = "casper-executor-wasmer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
wasmer = { version = "5.0.4", default-features = false, features = ["singlepass"] }
wasmer-compiler-singlepass = "5.0.4"
wasmer-middlewares = "5.0.4"
wasmer-types = "5.0.4"
casper-executor-wasm-interface = { path = "../wasm-interface" }
casper-executor-wasm-host = { path = "../wasm-host" }
casper-storage = { path = "../../storage" }
casper-sdk-sys = { path = "../../smart_contracts/sdk-sys" }
casper-types = { path = "../../types" }
regex = "1.10.6"
once_cell = "1.19.0"

[dev-dependencies]
wat = "1.227.1"
