[package]
name = "casper-executor-wasmer-backend"
version = "0.1.0"
edition = "2021"
authors = ["Michał Papierski <michal@casper.network>"]
description = "Casper executor interface package"
homepage = "https://casper.network"
repository = "https://github.com/casper-network/casper-node/tree/dev/executor/wasm_interface"
license = "Apache-2.0"

[dependencies]
bytes = "1.10"
casper-executor-wasm-common = { version = "0.1.0", path = "../wasm_common" }
casper-executor-wasm-interface = { version = "0.1.0", path = "../wasm_interface" }
casper-executor-wasm-host = { version = "0.1.0", path = "../wasm_host" }
casper-storage = { version = "2.0.0", path = "../../storage" }
casper-contract-sdk-sys = { version = "0.1.0", path = "../../smart_contracts/sdk_sys" }
casper-types = { version = "5.0.1", path = "../../types" }
regex = "1.11"
wasmer = { version = "5.0.4", default-features = false, features = [
    "singlepass",
] }
wasmer-compiler-singlepass = "5.0.4"
wasmer-middlewares = "5.0.4"
wasmer-types = "5.0.4"
tracing = "0.1.41"

[dev-dependencies]
wat = "1.227.1"
