[package]
name = "casper-contract-macros"
version = "0.1.0"
edition = "2021"
authors = ["Michał Papierski <michal@casperlabs.io>"]
description = "Casper contract macros package"
documentation = "https://docs.rs/casper-contract-macros"
homepage = "https://casper.network"
repository = "https://github.com/casper-network/casper-node/tree/dev/smart_contracts/macros"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
casper-executor-wasm-common = { version = "0.1.0", path = "../../executor/wasm_common" }
casper-contract-sdk-sys = { version = "0.1.0", path = "../sdk_sys" }
paste = "1"
darling = "0.20"
proc-macro2 = "1.0"
static_assertions = "1.1.0"

blake2-rfc = { version = "0.2.18", default-features = false, features = [
    "std",
] }

[features]
default = []
__abi_generator = []
__embed_schema = []
