[package]
name = "casper-sdk-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-sdk = { path = "../sdk" }
codegen = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = "2.1.0"
syn = "2"

[dev-dependencies]
trybuild = "1"
tempfile = "3.2.0"
borsh = { version = "1.5", features = ["derive"] }
