[package]
name = "casper-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Michał Papierski <michal@casperlabs.io>"]

[dependencies]
base16 = "0.2.1"
bitflags = "2.9"
bnum = { version = "0.13.0", features = ["borsh", "num-integer", "num-traits"] }
borsh = { version = "1.5", features = ["derive"] }
bytes = "1.10"
casper-executor-wasm-common = { path = "../../executor/wasm-common" }
casper-macros = { path = "../macros" }
casper-sdk-sys = { path = "../sdk-sys" }
cfg-if = "1.0.0"
clap = { version = "4", optional = true, features = ["derive"] }
const-fnv1a-hash = "1.1.0"
impl-trait-for-tuples = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"
once_cell = "1.19.0"
linkme = "=0.3.29"

[features]
default = ["std"]
std = []

cli = ["clap", "thiserror"]
__abi_generator = ["casper-macros/__abi_generator"]
__embed_schema = ["casper-macros/__embed_schema"]
