[package]
name = "casper-contract-sdk-codegen"
version = "0.1.1"
edition = "2021"
description = "Casper contract sdk codegen package"
authors = ["Michał Papierski <michal@casper.network>"]
documentation = "https://docs.rs/casper-contract-sdk-codegen"
homepage = "https://casper.network"
repository = "https://github.com/casper-network/casper-node/tree/dev/smart_contracts/sdk_codegen"
license = "Apache-2.0"

[dependencies]
casper-contract-sdk = { version = "0.1.1", path = "../sdk" }
codegen = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = "2.1.0"
syn = "2"

[dev-dependencies]
trybuild = "1"
tempfile = "3.2.0"
borsh = { version = "1.5", features = ["derive"] }
