[package]
name = "casper-contract-sdk-sys"
version = "0.1.1"
edition = "2021"
description = "Casper contract sdk sys package"
authors = ["Michał Papierski <michal@casper.network>"]
documentation = "https://docs.rs/casper-contract-sdk-sys"
homepage = "https://casper.network"
repository = "https://github.com/casper-network/casper-node/tree/dev/smart_contracts/sdk_sys"
license = "Apache-2.0"

[dependencies]
