[package]
name = "get-blocktime"
version = "0.1.0"
authors = ["Ed Hastings <ed@casper.network>, Henry Till <henrytill@gmail.com>"]
edition = "2021"

[[bin]]
name = "get_blocktime"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { path = "../../../contract" }
casper-types = { path = "../../../../types" }
