[package]
name = "mint-transfer-proxy"
version = "0.1.0"
authors = ["Michał Papierski <michal@casper.network>"]
edition = "2021"

[[bin]]
name = "mint_transfer_proxy"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { path = "../../../contract" }
casper-types = { path = "../../../../types" }
