[package]
name = "regression-add-bid"
version = "0.1.0"
authors = ["Karan Dhareshwar <karan@casper.network>", "Michał Papierski <michal@casper.network>"]
edition = "2021"

[[bin]]
name = "regression_add_bid"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { path = "../../../contract" }
casper-types = { path = "../../../../types" }
