[package]
name = "transfer-purse-to-accounts-stored"
version = "0.1.0"
authors = ["Michał Papierski <michal@casper.network>", "Ed Hastings <ed@casper.network>"]
edition = "2021"

[[bin]]
name = "transfer_purse_to_accounts_stored"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { path = "../../../contract" }
casper-types = { path = "../../../../types" }
transfer-purse-to-accounts = { path = "../transfer-purse-to-accounts" }
