[package]
name = "counter-installer"
version = "0.1.0"
authors = ["Ed Hastings <ed@casper.network>", "Michał Papierski <michal@casper.network>"]
edition = "2021"

[[bin]]
name = "counter_installer"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { path = "../../../contract" }
casper-types = { path = "../../../../types" }
