[package]
name = "hello-world"
version = "0.1.0"
authors = ["darthsiroftardis <karan@casper.network>", "Michał Papierski <michal@casper.network>"]
edition = "2021"

[[bin]]
name = "hello_world"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { path = "../../../contract" }
casper-types = { path = "../../../../types" }
